# Sonic-Nexus-v5

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  mod.ini
SonicNexus/: SonicNexus.hpp  SonicNexus.vcxproj
SonicNexus/Objects/NexusGlobals/: ActFinish.cpp  Camera.cpp  DeathEvent.cpp  Explosion.hpp  HUD.cpp  Invincibility.hpp  Monitor.cpp  Monitor.hpp  PSwitch.cpp  Ring.hpp  SignPost.cpp  SignPost.hpp  Spikes.hpp  StageSetup.cpp  TitleCard.cpp  TitleCard.hpp
SonicNexus/Objects/NexusIntro/: Intro.cpp  Intro.hpp
SonicNexus/Objects/NexusTitle/: FadeUp.hpp  Island.hpp  PressStart.hpp
SonicNexus/Objects/Players/: Player.cpp
SonicNexus/Objects/SSZ/: BlueShield.cpp  Bridge.hpp  Chompy.hpp  Fan.cpp  HelliBomber.hpp  MRally.cpp  Platform.hpp  RotatePalette.cpp  RotatePalette.hpp  SwingPlat.cpp  ZipLine.cpp
Source/: CMakeLists.txt  SonicNexus.sln  gameapi_util_cfg.py
Source/SonicNexus/: Math.cpp  Math.hpp  Objects.cmake  PublicFunctions.hpp  SonicNexus.cpp  SonicNexus.hpp  SonicNexus.vcxproj  SonicNexus.vcxproj.filters  allincludes.py
Source/SonicNexus/Objects/: All.cpp  All.hpp
Source/SonicNexus/Objects/NexusGlobals/: ActFinish.cpp  ActFinish.hpp  Camera.cpp  Camera.hpp  DeathEvent.cpp  DeathEvent.hpp  Explosion.cpp  Explosion.hpp  HUD.cpp  HUD.hpp  Invincibility.cpp  Invincibility.hpp  Monitor.cpp  Monitor.hpp  Music.cpp  Music.hpp  PSwitch.cpp  PSwitch.hpp  Ring.cpp  Ring.hpp  SignPost.cpp  SignPost.hpp  Spikes.cpp  Spikes.hpp  Spring.cpp  Spring.hpp  StageSetup.cpp  StageSetup.hpp  StarPost.cpp  StarPost.hpp  TitleCard.cpp  TitleCard.hpp
Source/SonicNexus/Objects/NexusIntro/: Intro.cpp  Intro.hpp  RLogo.cpp  RLogo.hpp
Source/SonicNexus/Objects/NexusTitle/: FadeUp.cpp  FadeUp.hpp  Island.cpp  Island.hpp  Logo.cpp  Logo.hpp  PressStart.cpp  PressStart.hpp
Source/SonicNexus/Objects/Players/: Player.cpp  Player.hpp
Source/SonicNexus/Objects/SSZ/: BlueShield.cpp  BlueShield.hpp  Bridge.cpp  Bridge.hpp  CLedge.cpp  CLedge.hpp  Chompy.cpp  Chompy.hpp  Corkscrew.cpp  Corkscrew.hpp  Fan.cpp  Fan.hpp  FrogOmatic.cpp  FrogOmatic.hpp  HelliBomber.cpp  HelliBomber.hpp  MRally.cpp  MRally.hpp  Parachute.cpp  Parachute.hpp  Platform.cpp  Platform.hpp  RotatePalette.cpp  RotatePalette.hpp  SwingPlat.cpp  SwingPlat.hpp  TubeSwitch.cpp  TubeSwitch.hpp  ZipLine.cpp  ZipLine.hpp  ZipTrack.cpp  ZipTrack.hpp
